fix: spacing around tables on mobile

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/table/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/table/styles.scss
@@ -5,7 +5,7 @@
 
 .table {
   &--container {
-    @media (width <= $breakpoint-tablet-min) {
+    @media (width < $breakpoint-tablet-min) {
       overflow: scroll;
 
       width: calc(100% + 32px);
@@ -48,7 +48,7 @@ td {
   border-color: var(--color-w16);
 }
 
-@media (width <= $breakpoint-tablet-min) {
+@media (width < $breakpoint-tablet-min) {
   th:first-child,
   td:first-child {
     border-left: none;
